--- a/p1/comun.html
+++ b/p1/comun.html
@@ -10,9 +10,18 @@
     <header>
 
     </header>
-    <section></section>
+    <section>
+        <a href="index.html">Inicio</a>
+        <a href="buscar.html">Buscar</a>
+        <a href="nuevo.html">Nueva</a>
+        <a href="index.html">Logout</a>
+        <a href="login.html">Login</a>
+        <a href="resgistro.html">Registro</a>
+    </section>
 
-    <footer></footer>
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
