primers enviaments Gemma

--- a/p1/index.html
+++ b/p1/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilo/estilo.css">
+    <title>Index</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Comunícate</h1>
+        <h2>Tu portal de información local</h2>
+        <a href="index.html"><img src="img/logo.png" alt="logotipo"></a>
+    </header>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="buscar.html">Buscar</a>
+        <a href="nuevo.html">Nueva</a>
+        <a href="index.html">Logout</a>
+        <a href="login.html">Login</a>
+        <a href="resgistro.html">Registro</a>
+    </nav>
+
+    <main>
+        <section>
+            
+        <section>
+    </main>
+
+    <footer>
+        <p><a href="acerca.html">Contacto</a> &copy; 2023</p>
+    </footer>
 </body>
 </html>
