--- a/p1/registro.html
+++ b/p1/registro.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>    
-    <title>Login</title>
+    <title>Registro</title>
 </head>
 <body>
     <header>
@@ -31,7 +31,15 @@
     </nav>
 
     <main>
-        
+        <h2>Regístrate</h2>
+        <form>
+            <label>Nombre:<input type="text" name="nombre" id="nombre" autofocus></label>
+            <label>Password:<input type="password" name="contraasenya1" id="contrasenya1"></label>
+            <label>Repita contraseña:<input type="password" name="contraasenya2" id="contrasenya2"></label>
+            <label>Email: <input type="email"></label>
+            <button type="submit" >Envviar</button>
+
+        </form>
     </main>
 
     <footer>
