--- a/p1/publicacion.html
+++ b/p1/publicacion.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>    
-    <title>Login</title>
+    <title>Publicacion</title>
 </head>
 <body>
     <header>
