--- a/p1/index.html
+++ b/p1/index.html
@@ -22,12 +22,12 @@
     </header>
 
     <nav>
-        <a href="index.html">Inicio</a>
-        <a href="buscar.html">Buscar</a>
-        <a href="nuevo.html">Nueva</a>
-        <a href="index.html">Logout</a>
-        <a href="login.html">Login</a>
-        <a href="resgistro.html">Registro</a>
+        <a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a>
+        <a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a>
+        <a href="nuevo.html"><i class="fa-solid fa-newspaper"></i> Nueva</a>
+        <a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+        <a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
+        <a href="resgistro.html"><i class="fa-solid fa-user-plus"></i> Registro</a>
     </nav>
 
     <main>
@@ -37,32 +37,32 @@
             <article>
                 <a href="publicacion.html"><h4 title="Título1">Título1</h4></a>
                 <a href="publicacion.html"><img src="./img1.png" alt="foto a describir"></a>
-                <p>Autor1  <br> Fecha1</p>
+                <p>Autor1  <br> <i class="fa-duotone fa-calendar-days"></i> Fecha1</p>
             </article>
             <article>
                 <a href="publicacion.html"><h4 title="Título2">Título2</h4></a>
                 <a href="publicacion.html"><img src="./img1.png" alt="foto a describir"></a>
-                <p>Autor2  <br> Fecha2</p>
+                <p>Autor2  <br> <i class="fa-duotone fa-calendar-days"></i> Fecha2</p>
             </article>
             <article>
                 <a href="publicacion.html"><h4 title="Título3">Título3</h4></a>
                 <a href="publicacion.html"><img src="./img1.png" alt="foto a describir"></a>
-                <p>Autor3  <br> Fecha3</p>
+                <p>Autor3  <br> <i class="fa-duotone fa-calendar-days"></i> Fecha3</p>
             </article>
             <article>
                 <a href="publicacion.html"><h4 title="Título4">Título4</h4></a>
                 <a href="publicacion.html"><img src="./img1.png" alt="foto a describir"></a>
-                <p>Autor4  <br> Fecha4</p>
+                <p>Autor4  <br> <i class="fa-duotone fa-calendar-days"></i> Fecha4</p>
             </article>
             <article>
                 <a href="publicacion.html"><h4 title="Título5">Título5</h4></a>
                 <a href="publicacion.html"><img src="./img1.png" alt="foto a describir"></a>
-                <p>Autor5  <br> Fecha5</p>
+                <p>Autor5  <br> <i class="fa-duotone fa-calendar-days"></i> Fecha5</p>
             </article>
             <article>
                 <a href="publicacion.html"><h5 title="Título6">Título6</h5></a>
                 <a href="publicacion.html"><img src="./img1.png" alt="foto a describir"></a>
-                <p>Autor6  <br> Fecha6</p>
+                <p>Autor6  <br> <i class="fa-duotone fa-calendar-days"></i> Fecha6</p>
             </article>
         </section>
         <nav>
