--- a/p1/registro.html
+++ b/p1/registro.html
@@ -22,12 +22,12 @@
     </header>
 
     <nav>
-        <a href="index.html">Inicio</a>
-        <a href="buscar.html">Buscar</a>
-        <a href="nuevo.html">Nueva</a>
-        <a href="index.html">Logout</a>
-        <a href="login.html">Login</a>
-        <a href="resgistro.html">Registro</a>
+        <a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a>
+        <a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a>
+        <a href="nuevo.html"><i class="fa-solid fa-newspaper"></i> Nueva</a>
+        <a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+        <a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
+        <a href="resgistro.html"><i class="fa-solid fa-user-plus"></i> Registro</a>
     </nav>
 
     <main>
