--- a/p1/acerca.html
+++ b/p1/acerca.html
@@ -31,7 +31,32 @@
     </nav>
 
     <main>
-
+        <h2>Práctica 1</h2>
+        <h3>Programación del Cliente Web</h3>
+        <p>Segundo curso de Ingeniería Multimedia</p>
+        <h3>Autoras</h3>
+        <table>
+            <tr>
+                <td> <img src="gemma.png" alt="">   </td>
+                <td> <img src="ana.png" alt="">   </td>
+            </tr>
+            <tr>
+                <td>Gemma Sellés Lloret</td>
+                <td>Ana Soler Guijarro</td>
+            </tr>
+            <tr>
+                <td>49230573Q</td>
+                <td>50387197Q</td>
+            </tr>
+            <tr>
+                <td>gsl21@alu.ua.es</td>
+                <td>amsg18@gcloud.ua.es</td>
+            </tr>
+            <tr>
+                <td>Grupo 2 de prácticas. Jueves de cinco a siete.</td>
+                <td>Grupo 2 de prácticas. Jueves de cinco a siete.</td>
+            </tr>
+        </table>
     </main>
 
     <footer>
