Correcció que posava al nav resgistro

--- a/p1/acerca.html
+++ b/p1/acerca.html
@@ -27,7 +27,7 @@
         <a href="nuevo.html"><i class="fa-solid fa-newspaper"></i> Nueva</a>
         <a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
         <a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
-        <a href="resgistro.html"><i class="fa-solid fa-user-plus"></i> Registro</a>
+        <a href="registro.html"><i class="fa-solid fa-user-plus"></i> Registro</a>
     </nav>
 
     <main>
