--- a/p1/registro.html
+++ b/p1/registro.html
@@ -27,17 +27,17 @@
         <a href="nuevo.html"><i class="fa-solid fa-newspaper"></i> Nueva</a>
         <a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
         <a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
-        <a href="resgistro.html"><i class="fa-solid fa-user-plus"></i> Registro</a>
+        <a href="registro.html"><i class="fa-solid fa-user-plus"></i> Registro</a>
     </nav>
 
     <main>
         <h2>Regístrate</h2>
         <form>
-            <label>Nombre:<input type="text" name="nombre" id="nombre" autofocus></label>
-            <label>Password:<input type="password" name="contraasenya1" id="contrasenya1"></label>
+            <label>Nombre:<input type="text" name="nombre" id="nombre" autofocus required></label>
+            <label>Password:<input type="password" name="contraasenya1" id="contrasenya1" required></label>
             <label>Repita contraseña:<input type="password" name="contraasenya2" id="contrasenya2"></label>
-            <label>Email: <input type="email"></label>
-            <button type="submit" >Envviar</button>
+            <label>Email: <input type="email" required></label>
+            <button type="submit" >Enviar</button>
 
         </form>
     </main>
