corregir cosetes + 1a ver login i busqueda

--- a/p1/acerca.html
+++ b/p1/acerca.html
@@ -33,12 +33,12 @@
     <main>
         <h2>Práctica 1</h2>
         <h3>Programación del Cliente Web</h3>
-        <p>Segundo curso de Ingeniería Multimedia</p>
+        <p>2º curso de Ingeniería Multimedia</p>
         <h3>Autoras</h3>
         <table>
             <tr>
-                <td> <img src="gemma.png" alt="">   </td>
-                <td> <img src="ana.png" alt="">   </td>
+                <td><img src="gemma.jpg" alt=""></td>
+                <td><img src="ana.png" alt=""></td>
             </tr>
             <tr>
                 <td>Gemma Sellés Lloret</td>
