--- a/p1/login.html
+++ b/p1/login.html
@@ -31,7 +31,13 @@
     </nav>
 
     <main>
-        
+        <h2>Login</h2>
+        <form method="post">
+            <label for="login">Login:</label> <input type="text" name="login" id="login" required autofocus placeholder="Juanico123">
+            <label for="psw">Password:</label> <input type="password" name="psw" id="psw" required placeholder="1234ascASC.*">
+            <input type="submit" value="Entrar">   
+        </form>
+        <p>¿No estás registrado? Regístrate <a href="registro.html">aquí</a></p>
     </main>
 
     <footer>
