--- a/p1/buscar.html
+++ b/p1/buscar.html
@@ -40,7 +40,7 @@
                 <label for="hasta">Hasta:</label> <input type="date" name="hasta" id="hasta"><br>
             </fieldset>
             <label for="ubi">Ubicación: </label> <input type="text" name="ubi" id="ubi" placeholder="La Florida"><br>
-            <input type="submit" value="Buscar">
+            <input type="submit" value="Buscar"><input type="reset" value="Limpiar">
         </form>
         <!-- resultados como index -->
         <h2>Resultado de la búsqueda</h2>
