--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -31,7 +31,14 @@
     </nav>
 
     <main>
-        
+        <h2>Nueva publicación</h2>
+        <form method="post">
+            <label for="titulo">Título:</label> <input type="text" name="titulo" id="titulo" maxlength="200" required><br>
+            <label for="texto">Texto:</label> <textarea name="texto" id="texto" required></textarea><br>
+            <label for="ubi">Ubicación:</label> <input type="text" name="ubi" id="ubi" maxlength="100" required><br>
+            <label for="img">Foto:</label> <input type="file" id="img" name="img" accept="image/*" required>
+            <input type="submit" value="Buscar"><input type="reset" value="Limpiar">
+        </form>
     </main>
 
     <footer>
