Registro Publicacion y foto

--- a/p1/registro.html
+++ b/p1/registro.html
@@ -37,7 +37,9 @@
             <label>Password: <input type="password" name="contrasenya1" id="contrasenya1" pattern="[a-zA-Z0-9._-]{4,20}" title="Debe contener un mínimo de 4 caracteres y un máximo de 20 caracteres, letras, números y los siguientes caracteres especiales ._- No puede contener espacios en blanco."required></label>
             <label>Repita contraseña: <input type="password" name="contrasenya2" id="contrasenya2" pattern="[a-zA-Z0-9._-]{4,20}"></label>
             <label>Email: <input type="email" required></label>
+            <img src="img/usuvoid.jpg">
             <label for="img">Foto:</label> <input type="file" id="img" name="img" accept="image/*" required>
+            <button>Eliminar foto</button>
             <input type="submit" value="Registrarse">
         </form>
     </main>
