HTML acabat per revisar

--- a/p1/acerca.html
+++ b/p1/acerca.html
@@ -37,8 +37,8 @@
         <h3>Autoras</h3>
         <table>
             <tr>
-                <td><img src="gemma.jpg" alt=""></td>
-                <td><img src="ana.png" alt=""></td>
+                <td><img src="gemma.jpg" alt="Foto Gemma"></td>
+                <td><img src="ana.png" alt="Foto Ana"></td>
             </tr>
             <tr>
                 <td>Gemma Sellés Lloret</td>
@@ -53,8 +53,8 @@
                 <td>amsg18@gcloud.ua.es</td>
             </tr>
             <tr>
-                <td>Grupo 2 de prácticas. Jueves de cinco a siete.</td>
-                <td>Grupo 2 de prácticas. Jueves de cinco a siete.</td>
+                <td>Grupo 2. Jueves de 17:00-19:00</td>
+                <td>Grupo 2. Jueves de 17:00-19:00</td>
             </tr>
         </table>
     </main>
