--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -35,8 +35,17 @@
         <form method="post">
             <label for="titulo">Título:</label> <input type="text" name="titulo" id="titulo" maxlength="200" required><br>
             <label for="texto">Texto:</label> <textarea name="texto" id="texto" required></textarea><br>
-            <label for="ubi">Ubicación:</label> <input type="text" name="ubi" id="ubi" maxlength="100" required><br>
-            <label for="img">Foto:</label> <input type="file" id="img" name="img" accept="image/*" required>
+            <label for="ubi">Ubicación:</label> <input list="ubis" name="ubi" id="ubi" maxlength="100" required> <!-- ojo que la list=id del datalist (ubis) -->
+            <datalist id="ubis">
+                <option value="Poble Nou">
+                <option value="Torres">
+                <option value="Talaies">
+                <option value="Pati Fosc">
+                <option value="Paradís">
+                <option value="Ermita">
+                <option value="Rodacuco">
+            </datalist><br>
+            <label for="img">Foto: <img src="img/usuvoid.jpg"></label><input type="file" id="img" name="img" accept="image/*" required><br>
             <input type="submit" value="Buscar"><input type="reset" value="Limpiar">
         </form>
     </main>
