--- a/p1/index.html
+++ b/p1/index.html
@@ -22,12 +22,16 @@
     </header>
 
     <nav>
-        <a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a>
-        <a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a>
-        <a href="nuevo.html"><i class="fa-solid fa-newspaper"></i> Nueva</a>
-        <a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
-        <a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
-        <a href="registro.html"><i class="fa-solid fa-user-plus"></i> Registro</a>
+        <label for="chkMenu">&equiv;</label> <!-- pal menu hamburguesa -->
+        <input type="checkbox" id="chkMenu">
+        <ul>
+            <li><a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
+            <li><a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a></li>
+            <li><a href="nuevo.html"><i class="fa-solid fa-newspaper"></i> Nueva</a></li>
+            <li><a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
+            <li><a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a></li>
+            <li><a href="registro.html"><i class="fa-solid fa-user-plus"></i> Registro</a></li>
+        </ul>        
     </nav>
 
     <main>
