--- a/p1/index.html
+++ b/p1/index.html
@@ -65,7 +65,7 @@
             </article>
             <article>
                 <a href="publicacion.html"><h5 title="Título6">Muntant al casc antic</h5></a>
-                <a href="publicacion.html"><img src="./img1.png" alt=""></a>
+                <a href="publicacion.html"><img src="./img/img1.png" alt=""></a>
                 <p>Paco  <br> <i class="fa-duotone fa-calendar-days"></i> Fecha6</p>
             </article>
         </section>
