HTML bé + minicanvis

--- a/p1/login.html
+++ b/p1/login.html
@@ -27,7 +27,7 @@
         <ul>
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
             <li><a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a></li>
-            <li><a href="nuevo.html"><i class="fa-solid fa-newspaper"></i> Nueva</a></li>
+            <li><a href="nueva.html"><i class="fa-solid fa-newspaper"></i> Nueva</a></li>
             <li><a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
             <li><a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a></li>
             <li><a href="registro.html"><i class="fa-solid fa-user-plus"></i> Registro</a></li>
@@ -37,11 +37,11 @@
     <main>
         <h2>Login</h2>
         <form method="post">
-            <label for="login">Login:</label> <input type="text" name="login" id="login" required autofocus placeholder="Juanico123">
-            <label for="psw">Password:</label> <input type="password" name="psw" id="psw" required placeholder="1234ascASC.*">
+            <label for="login">Login:</label> <input type="text" name="login" id="login" required autofocus>
+            <label for="psw">Password:</label> <input type="password" name="psw" id="psw" required>
             <input type="submit" value="Entrar">   
         </form>
-        <p>¿No estás registrado? Regístrate <a href="registro.html">aquí</a></p>
+        <p>¿No estás registrado? <a href="registro.html">Regístrate aquí</a></p>
     </main>
 
     <footer>
