--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -27,7 +27,7 @@
         <ul>
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
             <li><a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a></li>
-            <li><a href="nuevo.html"><i class="fa-solid fa-newspaper"></i> Nueva</a></li>
+            <li><a href="nueva.html"><i class="fa-solid fa-newspaper"></i> Nueva</a></li>
             <li><a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
             <li><a href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Login</a></li>
             <li><a href="registro.html"><i class="fa-solid fa-user-plus"></i> Registro</a></li>
@@ -50,7 +50,7 @@
                 <option value="Rodacuco">
             </datalist><br>
             <label for="img">Foto: <img src="img/usuvoid.jpg"></label><input type="file" id="img" name="img" accept="image/*" required><br>
-            <input type="submit" value="Buscar"><input type="reset" value="Limpiar">
+            <input type="submit" value="Publicar"><input type="reset" value="Limpiar">
         </form>
     </main>
 
