--- a/p1/login.html
+++ b/p1/login.html
@@ -37,8 +37,8 @@
     <main>
         <h2>Login</h2>
         <form method="post">
-            <label for="login">Login:</label> <input type="text" name="login" id="login" required autofocus>
-            <label for="psw">Password:</label> <input type="password" name="psw" id="psw" required>
+            <label >Login:<input type="text" name="login" id="login" required autofocus></label> 
+            <label >Password: <input type="password" name="psw" id="psw" required></label>
             <input type="submit" value="Entrar">   
         </form>
         <p>¿No estás registrado? <a href="registro.html">Regístrate aquí</a></p>
