--- a/p1/registro.html
+++ b/p1/registro.html
@@ -43,7 +43,7 @@
             <label>Email: <input type="email" required></label>
             <label for="img">Foto: <img src="img/usuvoid.jpg"></label> <input type="file" id="img" name="img" accept="image/*">
             <button>Eliminar foto</button>
-            <input type="submit" value="Registrarse">
+            <input type="submit"class="boton" value="Registrarse">
         </form>
     </main>
 
