--- a/p1/login.html
+++ b/p1/login.html
@@ -39,7 +39,7 @@
         <form method="post">
             <label >Login:<input type="text" name="login" id="login" required autofocus></label> 
             <label >Password: <input type="password" name="psw" id="psw" required></label>
-            <input type="submit" value="Entrar">   
+            <input type="submit" value="Entrar" class="boton">   
         </form>
         <p>¿No estás registrado? <a href="registro.html">Regístrate aquí</a></p>
     </main>
