--- a/p1/registro.html
+++ b/p1/registro.html
@@ -42,8 +42,8 @@
             <label>Repita contraseña: <input type="password" name="contrasenya2" id="contrasenya2" pattern="[a-zA-Z0-9._-]{4,20}"></label>
             <label>Email: <input type="email" required></label>
             <label for="img">Foto: <img src="img/usuvoid.jpg"></label> <input type="file" id="img" name="img" accept="image/*">
-            <button>Eliminar foto</button>
-            <input type="submit"class="boton" value="Registrarse">
+            <button class="boton">Eliminar foto</button>
+            <input type="submit" class="boton" value="Registrarse">
         </form>
     </main>
 
