--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -49,7 +49,7 @@
                 <option value="Ermita">
                 <option value="Rodacuco">
             </datalist><br>
-            <label for="img">Foto: <img src="img/usuvoid.jpg"></label><input type="file" id="img" name="img" accept="image/*" required><br>
+            <label for="img">Foto: <img src="img/usuvoid.jpg" alt=""></label><input type="file" id="img" name="img" accept="image/*" required><br>
             <input type="submit" value="Publicar"><input type="reset" value="Limpiar">
         </form>
     </main>
