--- a/p1/registro.html
+++ b/p1/registro.html
@@ -16,9 +16,11 @@
 </head>
 <body>
     <header>
-        <h1>Comunícate</h1>
-        <h2>Tu portal de información local</h2>
         <a href="index.html"><img src="img/logo.png" alt="logotipo" id="logo"></a>
+        <div>
+            <h1>Comunícate</h1>
+            <h2>Tu portal de información local</h2>
+        </div>
     </header>
 
     <nav>
