--- a/p1/index.html
+++ b/p1/index.html
@@ -26,8 +26,8 @@
     <nav>
         <label for="chkMenu">&equiv;</label> <!-- pal menu hamburguesa -->
         <input type="checkbox" id="chkMenu">
-        <ul>
-            <li><a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
+        <ul class="menu">
+            <li><a class="act" href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
             <li><a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a></li>
             <li><a href="nueva.html"><i class="fa-solid fa-newspaper"></i> Nueva</a></li>
             <li><a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
