--- a/p1/buscar.html
+++ b/p1/buscar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gemma Sellés Lloret y Ana María Soler Guijarro">
     <link rel="stylesheet" href="estilo/estilo.css">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,7 +47,7 @@
                 <label >Hasta:</label> <input type="date" name="hasta" id="hasta"></label>
             </fieldset>
             <label >Ubicación: <input type="text" name="ubi" id="ubi" placeholder="Costera Pastor"></label> 
-            <input type="submit" value="Buscar"><input type="reset" value="Limpiar">
+            <input type="submit" value="Buscar" class="boton"><input type="reset" value="Limpiar" class="boton">
         </form>
         <!-- resultados como index -->
         
