--- a/p1/publicacion.html
+++ b/p1/publicacion.html
@@ -81,7 +81,7 @@
             <form method="post">
                 <h4>Deja tu comentario:</h4>
                 <textarea maxlength="250"></textarea>
-                <input type="reset" value="Limpiar"><input type="submit" value="Enviar">
+                <input type="reset" value="Limpiar" class="boton"><input type="submit" value="Enviar" class="boton">
             </form>
         
             <p>Tienes que estar logueado para poder dejar un comentario <a href="login.html">Inicia Sesión</a></p>
