--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -39,9 +39,9 @@
     <main>
         <h2>Nueva publicación</h2>
         <form method="post">
-            <label for="titulo">Título:</label> <input type="text" name="titulo" id="titulo" maxlength="200" required><br>
-            <label for="texto">Texto:</label> <textarea name="texto" id="texto" required></textarea><br>
-            <label for="ubi">Ubicación:</label> <input list="ubis" name="ubi" id="ubi" maxlength="100" required> <!-- ojo que la list=id del datalist (ubis) -->
+            <label>Título: <input type="text" name="titulo" id="titulo" maxlength="200" required></label>
+            <label>Texto: <br> <textarea name="texto" id="texto" required></textarea></label> 
+            <label>Ubicación: <input list="ubis" name="ubi" id="ubi" maxlength="100" required> <!-- ojo que la list=id del datalist (ubis) --> </label>
             <datalist id="ubis">
                 <option value="Poble Nou">
                 <option value="Torres">
@@ -52,7 +52,7 @@
                 <option value="Rodacuco">
             </datalist><br>
             <label for="img">Foto: <img src="img/usuvoid.jpg" alt=""></label><input type="file" id="img" name="img" accept="image/*" required><br>
-            <input type="submit" value="Publicar"><input type="reset" value="Limpiar">
+            <input type="submit" value="Publicar" class="boton"><input type="reset" value="Limpiar" class="boton">
         </form>
     </main>
 
