--- a/p1/index.html
+++ b/p1/index.html
@@ -75,11 +75,11 @@
         </section>
         <nav>
             <p>
-                <button>&lt;&lt;</button>
-                <button>&lt;</button>
+                <button class="boton">&lt;&lt;</button>
+                <button class="boton">&lt;</button>
                 Página 1 de 6 
-                <button>&gt;</button>
-                <button>&gt;&gt;</button>
+                <button class="boton">&gt;</button>
+                <button class="boton">&gt;&gt;</button>
             </p>   
         </nav>
     </main>
