no ix desplegar nav

--- a/p1/acerca.html
+++ b/p1/acerca.html
@@ -63,6 +63,8 @@
                 <td>Grupo 2. Jueves de 17:00-19:00</td>
             </tr>
         </table>
+        <h3>Sobre nuestra práctica</h3>
+        <p>Para su correcta visualización, es necesario tener <b>acceso a internet</b> para que aparezcan las fuentes de texto y de iconos que hemos seleccionado. De no tenerlo, aparecerán las funtes de texto alternativa y no se verían los iconos.</p>
     </main>
 
     <footer>
