--- a/p1/acerca.html
+++ b/p1/acerca.html
@@ -26,7 +26,7 @@
     <nav>
         <label for="chkMenu">&equiv;</label> <!-- pal menu hamburguesa -->
         <input type="checkbox" id="chkMenu">
-        <ul>
+        <ul class="menu">
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
             <li><a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a></li>
             <li><a href="nueva.html"><i class="fa-solid fa-newspaper"></i> Nueva</a></li>
@@ -43,8 +43,8 @@
         <h3>Autoras</h3>
         <table>
             <tr>
-                <td><img src="gemma.jpg" alt="Foto Gemma"></td>
-                <td><img src="ana.png" alt="Foto Ana"></td>
+                <td><img src="img/gemma.jpg" alt="Foto Gemma"></td>
+                <td><img src="img/ana.png" alt="Foto Ana"></td>
             </tr>
             <tr>
                 <td>Gemma Sellés Lloret</td>
