--- a/p1/comun.html
+++ b/p1/comun.html
@@ -26,7 +26,8 @@
     <nav>
         <label for="chkMenu">&equiv;</label> <!-- pal menu hamburguesa -->
         <input type="checkbox" id="chkMenu">
-        <ul>
+        <ul class="menu">
+            <!-- posar class="act" a lo que vulguem que estiga diferent -->
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Inicio</a></li>
             <li><a href="buscar.html"><i class="fa-solid fa-magnifying-glass"></i> Buscar</a></li>
             <li><a href="nueva.html"><i class="fa-solid fa-newspaper"></i> Nueva</a></li>
