--- a/p1/acerca.html
+++ b/p1/acerca.html
@@ -44,7 +44,7 @@
         <table>
             <tr>
                 <td><img src="img/gemma.jpg" alt="Foto Gemma"></td>
-                <td><img src="img/ana.png" alt="Foto Ana"></td>
+                <td><img src="img/ana.jpeg" alt="Foto Ana"></td>
             </tr>
             <tr>
                 <td>Gemma Sellés Lloret</td>
