--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -51,7 +51,7 @@
                 <option value="Ermita">
                 <option value="Rodacuco">
             </datalist><br>
-            <label for="img">Foto: <img src="img/usuvoid.jpg" alt=""></label><input type="file" id="img" name="img" accept="image/*" required><br>
+            <label for="img">Foto: <img src="img/usuvoid.jpg" alt=""></label><input  type="file" id="img" name="img" accept="image/*" class="boton" required><br>
             <input type="submit" value="Publicar" class="boton"><input type="reset" value="Limpiar" class="boton">
         </form>
     </main>
