--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -51,7 +51,10 @@
                 <option value="Ermita">
                 <option value="Rodacuco">
             </datalist><br>
-            <label for="img">Foto: <img src="img/usuvoid.jpg" alt=""></label><input  type="file" id="img" name="img" accept="image/*" class="boton" required><br>
+            <button>Añadir foto</button>
+            <label for="img">Foto: <img src="img/usuvoid.jpg" alt=""><input  type="file"  name="img" accept="image/*" class="boton" required><br></label>
+            <label > icono carpeta<input type="file" id="img" name="img" accept="image/*"> </label> 
+            <button class="boton" type="button">Eliminar foto</button>
             <input type="submit" value="Publicar" class="boton"><input type="reset" value="Limpiar" class="boton">
         </form>
     </main>
