--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -52,8 +52,8 @@
                 <option value="Rodacuco">
             </datalist><br>
             <button>Añadir foto</button>
-            <label for="img">Foto: <img src="img/usuvoid.jpg" alt=""><input  type="file"  name="img" accept="image/*" class="boton" required><br></label>
-            <label > icono carpeta<input type="file" id="img" name="img" accept="image/*"> </label> 
+            <label for="img1">Foto: <img src="img/usuvoid.jpg" alt=""><input  type="file" id="img1"  name="img" accept="image/*" class="boton img" required><br></label>
+            <label > icono carpeta<input type="file" id="img" name="img" accept="image/*" class="img"> </label> 
             <button class="boton" type="button">Eliminar foto</button>
             <input type="submit" value="Publicar" class="boton"><input type="reset" value="Limpiar" class="boton">
         </form>
