--- a/p1/registro.html
+++ b/p1/registro.html
@@ -44,8 +44,8 @@
             <label>Password: <input type="password" name="contrasenya1" id="contrasenya1" pattern="[a-zA-Z0-9._-]{4,20}" title="Debe contener un mínimo de 4 caracteres y un máximo de 20 caracteres, letras, números y los siguientes caracteres especiales ._- No puede contener espacios en blanco." required></label>
             <label>Repita contraseña: <input type="password" name="contrasenya2" id="contrasenya2" pattern="[a-zA-Z0-9._-]{4,20}"></label>
             <label>Email: <input type="email" required></label>
-            <label for="img">Foto: <img src="img/usuvoid.jpg" alt=""></label> <input type="file" id="img" name="img" accept="image/*">
-            <label > icono carpeta <input type="file" id="img" name="img" accept="image/*"> </label>
+            <label for="img3">Foto: <img src="img/usuvoid.jpg" alt=""></label> <input type="file" id="img3" name="img" class="img" accept="image/*">
+            <label > icono carpeta <input type="file"  name="img" accept="image/*" class="img"> </label>
             <button class="boton" type="button">Eliminar foto</button>
             <input type="submit" class="boton" value="Registrarse">
         </form>
