--- a/p1/buscar.html
+++ b/p1/buscar.html
@@ -44,7 +44,7 @@
             <fieldset>
                 <legend>Fecha</legend>
                 <label>Desde: <input type="date" name="desde" id="desde"></label>
-                <label >Hasta:</label> <input type="date" name="hasta" id="hasta"></label>
+                <label >Hasta:<input type="date" name="hasta" id="hasta"></label>
             </fieldset>
             <label>Ubicación: <input type="text" name="ubi" id="ubi" placeholder="Costera Pastor"></label> 
             <input type="submit" value="Buscar" class="boton"><input type="reset" value="Limpiar" class="boton">
