--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -51,7 +51,7 @@
                 <option value="Ermita">
                 <option value="Rodacuco">
             </datalist><br>
-            <button>Añadir foto</button>
+            <button><i class="fa-solid fa-image"></i> Añadir foto</button>
             <label for="img1">Foto: <img src="img/usuvoid.jpg" alt=""><input  type="file" id="img1"  name="img" accept="image/*" class="boton img" required><br></label>
             <label ><i class="fa-solid fa-folder-open"></i><input type="file" id="img" name="img" accept="image/*" class="img"> </label> 
             <button class="boton" type="button"><i class="fa-solid fa-trash-can"></i> Eliminar foto</button>
