--- a/p1/comun.html
+++ b/p1/comun.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>    
     <title>Document</title>
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 <body>
     <header>
