--- a/p1/login.html
+++ b/p1/login.html
@@ -13,7 +13,7 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>    
     <title>Login</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 <body>
     <header>
