fora method de <form>

--- a/p1/buscar.html
+++ b/p1/buscar.html
@@ -40,7 +40,7 @@
 
     <main>
         <h2>Criterios de búsqueda</h2>
-        <form method="post">
+        <form>
             <label>Contiene:<input type="text" name="contiene" id="contiene" placeholder="La noticia incluye la palabra 'accidente'"></label> 
             <fieldset>
                 <legend>Fecha</legend>
