--- a/p1/publicacion.html
+++ b/p1/publicacion.html
@@ -89,7 +89,7 @@
                 </div>
             </article>
 
-            <form method="">
+            <form>
                 <h4>Deja tu comentario</h4>
                 <textarea maxlength="250"></textarea>
                 <footer class="botonera">
