--- a/p1/login.html
+++ b/p1/login.html
@@ -39,7 +39,7 @@
 
     <main>
         <h2>Login</h2>
-        <form method="">
+        <form>
             <label >Login:<input type="text" name="login" id="login" required autofocus></label> 
             <label >Password: <input type="password" name="psw" id="psw" required></label>
             <input type="submit" value="Entrar" class="boton">   
