--- a/p1/buscar.html
+++ b/p1/buscar.html
@@ -47,8 +47,10 @@
                 <label>Desde: <input type="date" name="desde" id="desde"></label>
                 <label >Hasta:<input type="date" name="hasta" id="hasta"></label>
             </fieldset>
-            <label>Ubicación: <input type="text" name="ubi" id="ubi" placeholder="Costera Pastor"></label> 
-            <input type="submit" value="Buscar" class="boton"><input type="reset" value="Limpiar" class="boton">
+            <label>Ubicación: <input type="text" name="ubi" id="ubi" placeholder="Costera Pastor"></label>
+            <div class="botonera"> 
+                <input type="submit" value="Buscar" class="boton"><input type="reset" value="Limpiar" class="boton">
+            </div>
         </form>
         <!-- resultados como index -->
         
