--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -52,12 +52,16 @@
                 <option value="Ermita">
                 <option value="Rodacuco">
             </datalist><br>
-            <button><i class="fa-solid fa-image"></i> Añadir foto</button>
-            <label for="img1">Foto: <img src="img/usuvoid.jpg" alt=""><input  type="file" id="img1"  name="img" accept="image/*" class="boton img" required><br></label>
-            <label ><i class="fa-solid fa-folder-open"></i><input type="file" id="img" name="img" accept="image/*" class="img"> </label> 
-            <button class="boton" type="button"><i class="fa-solid fa-trash-can"></i> Eliminar foto</button>
-            <input type="submit" value="Publicar" class="boton"><input type="reset" value="Limpiar" class="boton">
-        </form>
+            <button class="boton"><i class="fa-solid fa-image"></i> Añadir foto</button>
+            <label for="img1">Foto: <img src="img/usuvoid.jpg" alt=""><input  type="file" id="img1"  name="img" accept="image/*" class="img" required><br></label>
+            <div class="botonera"> 
+                <label class="carpeta  "><i class="fa-solid fa-folder-open"></i><input type="file" name="img" accept="image/*" class="img"> </label>
+                <button class="boton ko" type="button"><i class="fa-solid fa-trash-can"></i> </button>
+            </div>
+             <div class="">
+                <input type="submit" value="Publicar" class="boton"><input type="reset" value="Limpiar" class="boton">
+            </div> 
+            </form>
     </main>
 
     <footer>
