--- a/p1/registro.html
+++ b/p1/registro.html
@@ -45,8 +45,9 @@
             <label>Repita contraseña: <input type="password" name="contrasenya2" id="contrasenya2" pattern="[a-zA-Z0-9._-]{4,20}"></label>
             <label>Email: <input type="email" required></label>
             <label for="img3">Foto: <img src="img/usuvoid.jpg" alt=""></label> <input type="file" id="img3" name="img" class="img" accept="image/*">
-            <label><i class="fa-solid fa-folder-open"></i><input type="file" name="img" accept="image/*" class="img"> </label>
-            <button class="boton" type="button"><i class="fa-solid fa-trash-can"></i> Eliminar foto</button>
+           <div class="botonera"> <label class="carpeta  "><i class="fa-solid fa-folder-open"></i><input type="file" name="img" accept="image/*" class="img"> </label>
+            <button class="boton ko" type="button"><i class="fa-solid fa-trash-can"></i> </button>
+        </div>
             <input type="submit" class="boton" value="Registrarse">
         </form>
     </main>
