arreglat error publicación

--- a/p1/publicacion.html
+++ b/p1/publicacion.html
@@ -55,9 +55,9 @@
             <article class="separadors">
                 <h4><i class="fa-solid fa-camera"></i> Fotos</h4>
                 <div class="galeria">
-                    <img src="img/img1_1.jpg" alt="playa" width="100%">
-                    <img src="img/img1_2.jpg" alt="playa" width="100%">
-                    <img src="img/img1_3.jpg" alt="playa" width="100%">
+                    <img src="img/img1_1.jpg" alt="playa">
+                    <img src="img/img1_2.jpg" alt="playa">
+                    <img src="img/img1_3.jpg" alt="playa">
                 </div>
             </article>
         </section>
