posant cosetes i arreglant acerca

--- a/p1/buscar.html
+++ b/p1/buscar.html
@@ -41,7 +41,7 @@
     <main>
         <h2>Criterios de búsqueda</h2>
         <form>
-            <label>Contiene:<input type="text" name="contiene" id="contiene" placeholder="La noticia incluye la palabra 'accidente'"></label> 
+            <label>Contiene:<input type="text" name="contiene" id="contiene" placeholder="La noticia incluye la palabra 'accidente'" autofocus></label> 
             <fieldset>
                 <legend>Fecha</legend>
                 <label>Desde: <input type="date" name="desde" id="desde"></label>
